Phase One HTML Work. Cat pix.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
-<p> jaspe <p>
+<!DOCTYPE html>
+
+<html>
+	<head>
+		<title> Cat Pics dot Gov</title>
+	</head>
+	
+	<body>
+	<main>
+		
+		<header><h1> <b>This is Tiramisu!</b> </h1></header>
+		<br></br>
+		<article>
+		<p>Wow. What a cat.</p>
+		<img src="images/cat1.jpg" alt="Cat pic1" width="512" height="288">
+		</article>
+		
+		<br></br>
+		
+		<article>
+		<p> He's kind of the worst.</p>
+		<img src="images/cat2.jpg" alt="Cat pic2" width="512" height="288">
+		</article>
+		
+		<br></br>
+		
+		<article>
+		<p> I was inspired to adopt him because of how perfect my roommate's cat (Inki, pictured) is.</p>
+		<img src="images/cat6.jpg" alt="Inki! Best cat." width="288" height="512">
+		<p>10/10 best cat. </p>
+		</article>
+		
+		<br></br>
+		
+		<article>
+		<p> All he does is scream?</p>
+		<img src="images/cat3.jpg" alt="Cat pic2" width="512" height="288">
+		<p> Seriously. What's your problem? </p>
+		</article>
+		
+		<br></br>
+		
+		<article>
+		<p>They're both demons though.</p>
+		<img src="images/cat4.jpg" alt="Cat pic2" width="512" height="288"> <img src="images/cat7.jpg" alt="Cat pic2" width="288" height="512">
+		</article> 
+		
+	</main>
+	<br></br>
+	<footer>Tiramisu&copy; Incorporated&reg;</footer>
+	
+	</body>
+	
+</html>
