--- a/index.html
+++ b/index.html
@@ -3,50 +3,61 @@
 <html>
 	<head>
 		<title> Cat Pics dot Gov</title>
+		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 	
 	<body>
 	<main>
-		
+		<br>
 		<header><h1> <b>This is Tiramisu!</b> </h1></header>
-		<br></br>
-		<article>
-		<p>Wow. What a cat.</p>
-		<img src="images/cat1.jpg" alt="Cat pic1" width="512" height="288">
-		</article>
+		<br>
 		
-		<br></br>
+		<table>
+			<tr>
+				<td>
+					<article class="left">
+						<p>Wow. What a cat.</p>
+						<p>I adopted him sometime in July of 2020? He cried all the way home like a big baby. (It's okay, Tiramisu.)</p>
+						<p>Once we got home, he stayed inside the pet carrier all day and all night, opting to finally start exploring sometime in the early morning.</p>
+						<p>(I don't have access to the pictures from this time so we'll just have to make do. At least he's kinda photogenic?)
+						<img src="images/cat1.jpg" ALIGN="right" alt="Cat pic1" width="512" height="288">
+					</article>
+				</td>
+
+				<td>
+					<article class="right">
+						<p> He's kind of the worst.</p>
+						<img src="images/cat2.jpg" alt="Cat pic2" width="512" height="288">
+						<p> Real cute though.</p>
+					</article>
+				</td>
+			</tr>
+
+			<tr>
+				<td>
+					<article class="left">
+						<p> I was inspired to adopt him because of how perfect my roommate's cat (Inki, pictured) is.</p>
+						<img src="images/cat6.jpg" ALIGN="right" alt="Inki! Best cat." width="288" height="512">
+						<p>10/10 best cat. </p>
+					</article>
+				</td>
+				<td>
+					<article class="right">
+						<p> All he does is scream?</p>
+						<img src="images/cat3.jpg" alt="Cat pic2" width="512" height="288">
+						<p> Seriously. What's your problem? </p>
+					</article>
+				</td>
+			</tr>
+
+		</table>
+
+		<img src="images/const.gif" alt="Under construction!" width="133" height="133" #botright/>
 		
-		<article>
-		<p> He's kind of the worst.</p>
-		<img src="images/cat2.jpg" alt="Cat pic2" width="512" height="288">
-		</article>
-		
-		<br></br>
-		
-		<article>
-		<p> I was inspired to adopt him because of how perfect my roommate's cat (Inki, pictured) is.</p>
-		<img src="images/cat6.jpg" alt="Inki! Best cat." width="288" height="512">
-		<p>10/10 best cat. </p>
-		</article>
-		
-		<br></br>
-		
-		<article>
-		<p> All he does is scream?</p>
-		<img src="images/cat3.jpg" alt="Cat pic2" width="512" height="288">
-		<p> Seriously. What's your problem? </p>
-		</article>
-		
-		<br></br>
-		
-		<article>
-		<p>They're both demons though.</p>
-		<img src="images/cat4.jpg" alt="Cat pic2" width="512" height="288"> <img src="images/cat7.jpg" alt="Cat pic2" width="288" height="512">
-		</article> 
+		 
 		
 	</main>
-	<br></br>
+	<br>
 	<footer>Tiramisu&copy; Incorporated&reg;</footer>
 	
 	</body>
