--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 				<td>
 					<article class="right">
-						<p> He's kind of the worst.</p>
+						<p> He's kind of the worst?</p>
 						<img src="images/cat2.jpg" alt="Cat pic2" width="512" height="288">
 						<p> Real cute though.</p>
 					</article>
