--- a/index.html
+++ b/index.html
@@ -15,34 +15,35 @@
 		<table>
 			<tr>
 				<td>
-					<article class="left">
-						<p>Wow. What a cat.</p>
-						<p>I adopted him sometime in July of 2020? He cried all the way home like a big baby. (It's okay, Tiramisu.)</p>
-						<p>Once we got home, he stayed inside the pet carrier all day and all night, opting to finally start exploring sometime in the early morning.</p>
-						<p>(I don't have access to the pictures from this time so we'll just have to make do. At least he's kinda photogenic?)
-						<img src="images/cat2.jpg" ALIGN="right" alt="Cat pic1" width="512" height="288">
+					<article>
+						<p>Wow. What a cat.
+						<br>I adopted him sometime in July of 2020? He cried all the way home like a big baby. (It's okay, Tiramisu.)
+						<br>Once we got home, he stayed inside the pet carrier all day and all night, opting to finally start exploring sometime in the early morning.
+						<br>(I don't have access to the pictures from this time so we'll just have to make do. At least he's kinda photogenic?)
+						</p>
+						<img src="images/cat2.jpg" ALIGN="middle" alt="Pictured: Tiramisu, low to the ground, ready to pounce." width="512" height="288">
 					</article>
 				</td>
 
 				<td>
-					<article class="right">
-						<p> He's kind of the worst?</p>
-						<img src="images/cat1.jpg" alt="Cat pic2" width="512" height="288">
-						<p> Real cute though.</p>
+					<article>
+						<p> He's a little gremlin. Loves to be on the counters (where he doesn't belong) and scratch the furniture (which is unappreicated). He is also obsessed with the wand toy pictured and will yell forever until he gets it. Brat.</p>
+						<img src="images/cat1.jpg" ALIGN="right" alt="Pictured: Tiramisu, sitting to the left of the frame, staring down at a small toy." width="512" height="288">
+						<p> He's Real cute though. Way to go.</p>
 					</article>
 				</td>
 			</tr>
 
 			<tr>
 				<td>
-					<article class="left">
+					<article>
 						<p> I was inspired to adopt him because of how perfect my roommate's cat (Inki, pictured) is.</p>
-						<img src="images/cat6.jpg" ALIGN="right" alt="Inki! Best cat." width="288" height="512">
+						<img src="images/cat6.jpg" class="inki" ALIGN="middle" alt="Inki! Best cat." width="288" height="512">
 						<p>10/10 best cat. </p>
 					</article>
 				</td>
 				<td>
-					<article class="right">
+					<article>
 						<p> All he does is scream?</p>
 						<img src="images/cat3.jpg" alt="Cat pic2" width="512" height="288">
 						<p> Seriously. What's your problem? </p>
@@ -52,13 +53,13 @@
 
 		</table>
 
-		<img src="images/const.gif" alt="Under construction!" width="133" height="133" #botright/>
+		<img src="images/const.gif"  id="botright" alt="Under construction!" width="66.5" height="66.5"/>
 		
 		 
 		
 	</main>
-	<br>
-	<footer>Tiramisu&copy; Incorporated&reg;</footer>
+	
+	<footer class="footer">Tiramisu&copy; Incorporated&reg;</footer>
 	
 	</body>
 	
